# daioe_final

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/01_daioe_raw/: daioe_ssyk2012.csv  daioe_ssyk96.csv
data/02_scb_data/: ssyk2012_en_2023.csv  ssyk96_en_2013.csv
data/03_daioe_aggregated/: daioe_ssyk2012_emp_weighted.csv  daioe_ssyk2012_simple_avg.csv  daioe_ssyk96_emp_weighted.csv  daioe_ssyk96_simple_avg.csv
data/04_translation_files/: ssyk2012_en.xlsx
scripts/: 01_scbPull.py  01_scbPull_AI.py  02_weighting.py  02_weighting_AI.py  03_translate_ssyk2012.py
test_notebooks/: 01_scb_pull.ipynb  02_daioe_employment_aggregation.ipynb
