[project]
name = "daioe-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "itables>=2.5.2",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.3",
    "penguins>=0.5.2",
    "plotly>=6.3.1",
    "plotly-express>=0.4.1",
    "plotnine>=0.15.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "shiny>=1.5.0",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.7.0",
    "statsmodels>=0.14.5",
]
